# mas-talk-2508

./: README.md  outline.md
code/: Makefile  README.md  env.example  pyproject.toml
code/agentdemo/: __init__.py
code/agentdemo/agents/: __init__.py
code/agentdemo/agents/deep_researcher/: __init__.py  configuration.py  prompts.py  researcher.py  state.py
code/agentdemo/common/: logging_config.py
code/agentdemo/common/llm/: __init__.py  openrouter.py
code/agentdemo/common/websearch/: __init__.py  base_search.py  google_ai_search.py
code/examples/: deep_researcher_example.py
